--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,30 @@
 /*  your css code here. If applicable */
+*{
+	background-color:rgb(204, 204, 204);
+}
+
+
+.my-play{
+	border:2px solid black;
+	background-color:white;
+	border-radius:10px;
+	margin:30px;
+}
+li{
+	list-style-type: none;
+}
+a{
+	text-decoration-line:none;
+}
+
+.player{
+	border:2px solid black;
+	background-color:white;
+	border-radius:10px;
+}
+
+.player_one{
+	background-color: rgb(255, 255, 255);
+	padding:20px;
+	border-radius:10px;
+}
