--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,12 @@ a{
 }
 
 .player_one{
-	background-color: rgb(255, 255, 255);
+	background-color: white;
+	padding:20px;
+	border-radius:10px;
+}
+.player_two{
+	background-color: white;
 	padding:20px;
 	border-radius:10px;
 }
