--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@
 	background-color:rgb(204, 204, 204);
 }
 
-.my-play{
-	
+.player_one{
+	background-color:rgb(255, 255, 255);
+	border-radius:10px;
+	padding:10px;
+}
+.player_two{
+	background-color:rgb(255, 255, 255);
+	border-radius:10px;
+	padding:10px;
 }
